# mpgu_imi_edupract_course4_sem8_cpp

./: CMakeLists.txt  README.md
problem16/: problem16_009.cpp  problem16_016.cpp  problem16_051.cpp
problem17/: problem17_001.cpp  problem17_018.cpp  problem17_057.cpp
problem25/: problem25_011.cpp  problem25_026.cpp
problem27/: problem27_012.cpp  problem27_058.cpp
problem27/input_files/: problem27_012_input_01.txt
