cmake_minimum_required(VERSION 3.27)
project(mpgu_imi_edupract_course4_sem8_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(problem16_009 problem16/problem16_009.cpp)
add_executable(problem16_016 problem16/problem16_016.cpp)
add_executable(problem16_051 problem16/problem16_051.cpp)

add_executable(problem17_001 problem17/problem17_001.cpp)
add_executable(problem17_018 problem17/problem17_018.cpp)
add_executable(problem17_057 problem17/problem17_057.cpp)

add_executable(problem25_011 problem25/problem25_011.cpp)
add_executable(problem25_026 problem25/problem25_026.cpp)
